--- a/src/app/common/shared/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/common/shared/components/breadcrumbs/breadcrumbs.component.html
@@ -1,12 +1,12 @@
 <ul class="breadcrumbs" [ngClass]="{ breadcrumbs__hidden: hidden }">
   <li *ngFor="let breadcrumb of breadcrumbs$ | async; let last = last" class="breadcrumbs__item">
 
-    <a [routerLink]="breadcrumb.url" *ngIf="!last" class="breadcrumbs__link">{{ getShortTitle(breadcrumb.name) }}</a>
+    <a [routerLink]="breadcrumb.url" *ngIf="!last" class="breadcrumbs__link">{{ getShortTitle(breadcrumb.name) | translate }}</a>
     <mat-icon *ngIf="!last" class="breadcrumbs__icon">
       keyboard_arrow_right
     </mat-icon>
     <span *ngIf="last" class="breadcrumbs__label">
-      {{ getShortTitle(breadcrumb.name) }}
+      {{ getShortTitle(breadcrumb.name) | translate }}
     </span>
 
   </li>
