--- a/src/app/modules/albums/albums.component.html
+++ b/src/app/modules/albums/albums.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="mode === ModeType.edit" class="items__actions">
     <button (click)="createItem()" class="items__button" mat-flat-button color="primary">
       <mat-icon>add</mat-icon>
-      Add Album
+      {{ 'BUTTONS.ADD_ALBUM' | translate }}
     </button>
   </div>
 
@@ -10,13 +10,13 @@
 
     <!-- ID -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id"> Id </th>
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id">{{ 'TABLE_HEADERS.ID' | translate }}</th>
       <td mat-cell *matCellDef="let element" class="table__column table__column_id"> {{ element.id }} </td>
     </ng-container>
 
     <!-- Title -->
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef class="table__column table__column_title"> Album title </th>
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_title">{{ 'TABLE_HEADERS.ALBUM_TITLE' | translate }}</th>
       <td mat-cell *matCellDef="let element" class="table__column table__column_title"> {{ element.title }} </td>
     </ng-container>
 
