--- a/src/app/modules/posts/posts.component.html
+++ b/src/app/modules/posts/posts.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="mode === ModeType.edit" class="items__actions">
     <button (click)="createPost()" class="items__button" mat-flat-button color="primary">
       <mat-icon>add</mat-icon>
-      Add Post
+      {{ 'BUTTONS.ADD_POST' | translate }}
     </button>
   </div>
 
@@ -10,19 +10,19 @@
 
     <!-- ID -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id"> Id </th>
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id">{{ 'TABLE_HEADERS.ID' | translate }}</th>
       <td mat-cell *matCellDef="let element" class="table__column table__column_id"> {{ element.id }} </td>
     </ng-container>
 
     <!-- Title -->
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef class="table__column table__column_title"> Title </th>
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_title">{{ 'TABLE_HEADERS.TITLE' | translate }}</th>
       <td mat-cell *matCellDef="let element" class="table__column table__column_title"> {{ element.title }} </td>
     </ng-container>
 
     <!-- Text -->
     <ng-container matColumnDef="text">
-      <th mat-header-cell *matHeaderCellDef> Text </th>
+      <th mat-header-cell *matHeaderCellDef>{{ 'TABLE_HEADERS.TEXT' | translate }}</th>
       <td mat-cell *matCellDef="let element">
         <span *ngIf="element.showAll || element.body.length <= maxLengthPostBody">{{ element.body }}</span>
         <span *ngIf="!element.showAll && element.body.length > maxLengthPostBody">{{ element.body?.substring(0, maxLengthPostBody) }}...</span>
@@ -32,7 +32,7 @@
           mat-button
           class="table__toggle-button"
         >
-          {{ element.showAll ? 'Show less' : 'Show more' }}
+          {{ (element.showAll ? 'BUTTONS.SHOW_LESS' : 'BUTTONS.SHOW_MORE') | translate }}
         </button>
       </td>
     </ng-container>
