--- a/src/app/modules/todos/todos.component.html
+++ b/src/app/modules/todos/todos.component.html
@@ -2,20 +2,20 @@
   <div *ngIf="mode === ModeType.edit" class="items__actions">
     <button (click)="createTodo()" class="items__button" mat-flat-button color="primary">
       <mat-icon>add</mat-icon>
-      Add Todo
+      {{ 'BUTTONS.ADD_TODO' | translate }}
     </button>
   </div>
 
   <table mat-table [dataSource]="dataSource" class="table mat-elevation-z1">
     <!-- ID -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id"> Id </th>
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id">{{ 'TABLE_HEADERS.ID' | translate }}</th>
       <td mat-cell *matCellDef="let element" class="table__column table__column_id"> {{ element.id }} </td>
     </ng-container>
 
     <!-- Checkbox -->
     <ng-container matColumnDef="checkbox">
-      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id"> State </th>
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id">{{ 'TABLE_HEADERS.STATE' | translate }}</th>
       <td mat-cell *matCellDef="let element" class="table__column table__column_id">
         <div class="auth__row">
           <mat-checkbox
@@ -31,7 +31,7 @@
 
     <!-- Title -->
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef class="table__column table__column_title"> Title </th>
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_title">{{ 'TABLE_HEADERS.TITLE' | translate }}</th>
       <td mat-cell *matCellDef="let element" [class.completed]="element.completed" class="table__column table__column_title"> {{ element.title }} </td>
     </ng-container>
 
@@ -46,11 +46,11 @@
           <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="editTodo(element)">
               <mat-icon [color]="'primary'">edit</mat-icon>
-              <span>Edit</span>
+              <span>{{ "BUTTONS.EDIT" | translate }}</span>
             </button>
             <button mat-menu-item (click)="deleteTodo(element.id)">
               <mat-icon [color]="'warn'">delete_forever</mat-icon>
-              <span>Remove</span>
+              <span>{{ "BUTTONS.REMOVE" | translate }}</span>
             </button>
           </mat-menu>
         </div>
