--- a/src/app/common/modules/modals/message-dialog/message-dialog.component.html
+++ b/src/app/common/modules/modals/message-dialog/message-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog">
-  <h3 *ngIf="data?.title" class="dialog__title" mat-dialog-title>{{ data?.title }}</h3>
+  <h3 *ngIf="data?.title" class="dialog__title" mat-dialog-title>{{ data?.title | translate }}</h3>
 
-  <div *ngIf="data?.message" [innerHTML]="data?.message" class="dialog__text"></div>
+  <div *ngIf="data?.message" [innerHTML]="data?.message | translate" class="dialog__text"></div>
 
   <div *ngIf="isAlertModal" class="dialog__actions" mat-dialog-actions>
     <button
@@ -10,16 +10,16 @@
       color="primary"
       mat-flat-button
     >
-      {{ approveName }}
+      {{ approveName | translate }}
     </button>
   </div>
 
   <div *ngIf="isConfirmModal" class="dialog__actions" mat-dialog-actions>
     <button (click)="approveDialog()" class="dialog__button" color="primary" mat-flat-button>
-      {{ approveName }}
+      {{ approveName | translate }}
     </button>
     <button [mat-dialog-close]="false" class="dialog__button" color="primary" mat-stroked-button>
-      {{ declineName }}
+      {{ declineName | translate }}
     </button>
   </div>
 </div>
