--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,11 +1,14 @@
 <div class="auth">
   <div class="auth__column auth__column_form">
-    <h1 class="auth__title">Sign in to Adminka</h1>
-    <p class="auth__subtitle">Sign in on Adminka Na Kolenke platform</p>
+    <div class="auth__lang-panel">
+      <select-lang class="auth__lang"></select-lang>
+    </div>
+    <h1 class="auth__title">{{ 'HEADERS.SIGN_IN' | translate }}</h1>
+    <p class="auth__subtitle">{{ 'HEADERS.SIGN_IN_TO_PLATFORM' | translate }}</p>
 
     <div *ngIf="wrongMail" class="auth__message">
       <mat-icon [color]="'warn'">error_outline</mat-icon>
-      This user does not exist in the system.
+      {{ 'HEADERS.USER_NOT_EXIST' | translate }}
     </div>
 
     <form [formGroup]="formGroup" (submit)="signIn()">
@@ -13,7 +16,7 @@
         <app-mat-form-field
           [inputType]="InputType.email"
           [required]="true"
-          [placeholder]="'Enter your email'"
+          [placeholder]="'FIELDS.ENTER_EMAIL' | translate"
           [control]="formGroup.get('email')"
         >
         </app-mat-form-field>
@@ -25,11 +28,13 @@
           color="primary"
           [control]="formGroup.get('isAgreed')"
         >
-          I agree to Sign In
+          {{ 'FIELDS.AGREE_TO_SIGN' | translate }}
         </mat-form-checkbox>
       </div>
 
-      <button mat-flat-button type="submit" color="primary" class="shadow full-width auth__button">Sign In</button>
+      <button mat-flat-button type="submit" color="primary" class="shadow full-width auth__button">
+        {{ 'BUTTONS.SIGN_IN' | translate }}
+      </button>
     </form>
   </div>
 
