--- a/src/app/common/modules/layouts/main-header/main-header.component.scss
+++ b/src/app/common/modules/layouts/main-header/main-header.component.scss
@@ -30,10 +30,7 @@
   &__button-group {
     display: flex;
     align-items: center;
-  }
-
-  &__button {
-    margin-left: 1rem;
+    gap: 1rem;
   }
 
   &__buton-icon {
