feat: saving DarkTheme state

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -107,3 +107,10 @@
     align-items: center;
   }
 }
+
+.darkMode .mat-table {
+  .mat-cell,
+  .mat-header-cell {
+    color: var(--color-platinum);
+  }
+}
