feat: add base colors for dark-mode

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
   display: flex;
 
   &__main {
-    background-color: var(--color-ghost-white);
+    background-color: var(--color-content-bg);
     flex-grow: 1;
     padding: 0;
   }
