--- a/src/app/common/modules/layouts/side-nav/user-data/user-data.component.scss
+++ b/src/app/common/modules/layouts/side-nav/user-data/user-data.component.scss
@@ -20,14 +20,14 @@
 
   &__name {
     margin-bottom: 0.4rem;
-    color: var(--color-onyx);
+    color: var(--nav-title-text);
     font-size: 1.6rem;
     font-weight: 400;
     text-align: center;
   }
 
   &__company {
-    color: var(--color-quick-silver);
+    color: var(--nav-subtitle-text);
     font-size: 1.2rem;
     font-weight: 400;
     text-align: center;
