--- a/src/app/common/modules/layouts/side-nav/side-nav.component.scss
+++ b/src/app/common/modules/layouts/side-nav/side-nav.component.scss
@@ -2,5 +2,6 @@
   width: 27rem;
   height: calc(100vh - 6.4rem);
   padding: 2.4rem 1.6rem;
-  border: 1px solid var(--color-platinum);
+  border: 1px solid var(--nav-border);
+  background: var(--nav-bg);
 }
