--- a/src/app/modules/single-album/single-album.component.scss
+++ b/src/app/modules/single-album/single-album.component.scss
@@ -6,7 +6,7 @@
 
   &__content,
   &__photos {
-    background-color: var(--color-white);
+    background-color: var(--color-common-bg);
     border-radius: 0.4rem;
     padding: 2.4rem;
     box-shadow: var(--shadow-block);
@@ -14,7 +14,7 @@
   }
 
   &__title {
-    color: var(--color-dark-gunmetal);
+    color: var(--color-title-bg);
     font-size: 2.4rem;
     font-weight: var(--fw-medium);
     line-height: 2.8rem;
@@ -60,7 +60,7 @@
   }
 
   &__comment-title {
-    color: var(--color-dark-gunmetal);
+    color: var(--color-common-title);
     font-size: 1.6rem;
     font-weight: var(--fw-medium);
     line-height: 1.8rem;
