--- a/src/app/modules/user-data/user-data.component.scss
+++ b/src/app/modules/user-data/user-data.component.scss
@@ -7,7 +7,7 @@
   }
 
   &__content {
-    background-color: var(--color-white);
+    background-color: var(--color-common-bg);
     box-shadow: var(--shadow-block);
     border-radius: 0.4rem;
     padding: 2.4rem;
