--- a/src/app/common/modules/layouts/side-nav/side-nav.component.scss
+++ b/src/app/common/modules/layouts/side-nav/side-nav.component.scss
@@ -1,6 +1,7 @@
 .sidebar {
   width: 27rem;
   height: calc(100vh - 6.4rem);
+  min-height: 100%;
   padding: 2.4rem 1.6rem;
   border: 1px solid var(--nav-border);
   background: var(--nav-bg);
