--- a/src/app/modules/user-data/user-data.component.scss
+++ b/src/app/modules/user-data/user-data.component.scss
@@ -4,6 +4,7 @@
     font-weight: var(--fw-medium);
     line-height: 2rem;
     letter-spacing: -0.05px;
+    color: var(--color-common-title);
   }
 
   &__content {
@@ -18,7 +19,7 @@
     display: block;
     content: "";
     margin: 1rem -2.4rem 2.4rem;
-    border-bottom: 1px solid var(--color-platinum);
+    border-bottom: 1px solid var(--nav-subtitle-text);
   }
 
   &__field {
