--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="isLogined; else login">
-  <main-header (logOutUser)="logOut()" (changeMode)="changeMode($event)"></main-header>
+  <main-header (logOutUser)="logOut()"></main-header>
 
-  <div [class.darkMode]="darkMode" class="content">
+  <div class="content">
     <side-nav [currentRole]="currentRole"></side-nav>
 
     <div class="content__main">
