feat: add max-width to app

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 .content {
   display: flex;
+  max-width: var(--max-page-width);
+  margin: 0 auto;
 
   &__main {
     background-color: var(--color-content-bg);
