--- a/src/app/common/modules/layouts/main-header/main-header.component.scss
+++ b/src/app/common/modules/layouts/main-header/main-header.component.scss
@@ -7,6 +7,8 @@
     align-content: center;
     min-height: 6.4rem;
     padding: 1rem 2.4rem;
+    max-width: var(--max-page-width);
+    margin: 0 auto;
   }
 
   &__logo {
