style: add styles for dark theme

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -7,6 +7,10 @@
   --max-page-width: 1360px;
 }
 
+body {
+  background-color: var(--color-content-bg);
+}
+
 .items {
   position: relative;
   width: 100%;
