--- a/src/app/common/shared/components/light-mode-switcher/light-mode-switcher.component.scss
+++ b/src/app/common/shared/components/light-mode-switcher/light-mode-switcher.component.scss
@@ -9,4 +9,14 @@
   &__icon {
     filter: drop-shadow(0 0.2rem 0.2rem rgba(0, 0, 0, 0.4));
   }
+
+  ::ng-deep {
+    .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+      background-color: var(--color-quick-silver);
+    }
+
+    .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+      background-color: var(--color-user-bg);
+    }
+  }
 }
